[package]
name = "vrcite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.11", features = ["macros", "auto-send"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
